--- a/src/app/profile-bar/profile-bar.component.scss
+++ b/src/app/profile-bar/profile-bar.component.scss
@@ -11,19 +11,23 @@
   background: rgba(255,255,255,0.2);
   //background: linear-gradient(to right, white 90%, rgba(255, 255, 255,0.0) 100%);
   @include mat-elevation(0);
-  app-blason{
+
+  app-blason.avatar {
     border: 1px solid rgba(0,0,0,0.08);
     background: white;
     border-radius: 50%;
     overflow: hidden;
+    margin-bottom: 20px;
     cursor: pointer;
     transition:all 0.3s ease-in-out;
-  }
-  .avatar:focus {
-    outline: none;
-  }
-  app-blason:hover{
-    transform: scale(1.2);
-    @include mat-elevation(2);
+
+    &:focus {
+      outline: none;
+    }
+
+    &:hover {
+      transform: scale(1.2);
+      @include mat-elevation(2);
+    }
   }
 }
