List all user private contests

--- a/src/app/contest-dialog/contest-dialog.component.html
+++ b/src/app/contest-dialog/contest-dialog.component.html
@@ -23,5 +23,5 @@
 <div mat-dialog-actions>
   <button mat-button (click)="onCancelClick()">Annuler</button>
   <button mat-raised-button mat-button color="primary" (click)="submitContestDialogForm()"
-    [disabled]="contestDialogForm.invalid || submitted">Créer le concours</button>
+    [disabled]="contestDialogForm.invalid">Créer le concours</button>
 </div>
