--- a/src/app/error/server/server.component.html
+++ b/src/app/error/server/server.component.html
@@ -10,7 +10,7 @@
       Just kidding, looks like we have an internal issue, please try again in couple minutes
     </div>
 
-    <a class="report-link" [routerLink]="'/'">Report this problem</a>
+    <a class="report-link" [routerLink]="'/'">Retry</a>
 
   </div>
 
