--- a/src/app/shared/component/cards/upcoming-card/upcoming-card.component.html
+++ b/src/app/shared/component/cards/upcoming-card/upcoming-card.component.html
@@ -1,5 +1,5 @@
 <mat-card class="custom-card" >
-  <mat-card-content fxLayout="column" mat-ripple [routerLink]="['/contest/'+contest.id+'/match/'+match.id]">
+  <mat-card-content fxLayout="column" mat-ripple [routerLink]="['/contest/'+contest.id+'/matches/'+match.id]">
     <div fxLayout="row" fxLayoutAlign="space-between center" class="head-card">
 
       <div fxLayout="row" fxLayoutAlign="center center">
