--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,13 @@
 <ng-container *ngIf="showProfileBar || showHeader; else fullscreen">
   <main>
     <section>
+      <!--
       <header *ngIf="showHeader">
         <app-header-nav></app-header-nav>
-      </header>
+      </header>-->
       <router-outlet></router-outlet>
     </section>
+
     <app-profile-bar *ngIf="showProfileBar"></app-profile-bar>
   </main>
 </ng-container>
