--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,8 +25,8 @@
     display: flex;
     flex-direction: row;
     flex: 1;
-    max-width: 1400px;
-    min-width: 1400px;
+    //max-width: 1400px;
+    //min-width: 1400px;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -65,9 +65,9 @@
         background: linear-gradient(to right,
           rgba(255, 255, 255, 0.1) 0%,
           rgba(255, 255, 255, 0.2) 15%,
-          rgba(255, 255, 255, 0.5) 30%,
-          rgba(255, 255, 255, 0.8) 60%,
-          rgba(255, 255, 255, 1)   90%);
+          rgba(255, 255, 255, 0.3) 30%,
+          rgba(255, 255, 255, 0.4) 60%,
+          rgba(255, 255, 255, 0.5)   90%);
       }
     }
   }
