--- a/src/app/profile/components/drawer/drawer.component.html
+++ b/src/app/profile/components/drawer/drawer.component.html
@@ -2,13 +2,14 @@
 
   <div fxFlex="300px" fxLayout="column">
     <div fxFlex="1 0 auto" fxLayout="column" fxLayoutAlign="center center">
-      <app-blason  [src]="user.picture" [width]="'80'" [height]="'80'" (click)="logout()"></app-blason>
+      <app-blason  [src]="user.picture" [width]="'100'" [height]="'100'" (click)="logout()"></app-blason>
       <span  class="name">{{user.name}}</span>
+      <!--
       <div   fxLayout="row" fxLayoutGap="3px" class="rank">
         <span>Big boss</span>
         <span>-</span>
         <span>level 2</span>
-      </div>
+      </div>-->
     </div>
     <div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="30px" style="margin-bottom: 25px" >
       <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px" class="follow-block">
