--- a/src/app/shared/component/cards/past-card/past-card.component.html
+++ b/src/app/shared/component/cards/past-card/past-card.component.html
@@ -1,6 +1,6 @@
 <mat-card class="custom-card">
   <mat-card-content fxLayout="column" mat-ripple
-                    [routerLink]="['/contest/'+contest.id+'/match/'+match.id]">
+                    [routerLink]="['/contest/'+contest.id+'/matches/'+match.id]">
 
     <div fxLayout="row" fxLayoutAlign="space-between center" class="head-card">
 
