--- a/src/app/shared/component/cards/upcoming-card/upcoming-card.component.html
+++ b/src/app/shared/component/cards/upcoming-card/upcoming-card.component.html
@@ -17,7 +17,7 @@
           23:30
         </span>
         <span class="card-date">
-          28 jun 2018
+            {{match.utcDate | date : 'dd MM yyyy' }}
         </span>
       </div>
 
