--- a/src/app/home/components/navigation/navigation.component.html
+++ b/src/app/home/components/navigation/navigation.component.html
@@ -1,11 +1,12 @@
 <div class="section-title">
   <h4>Football leagues</h4>
   <span fxFlex="1 0 auto"></span>
+  <!--
   <button
     mat-stroked-button
           (click)="openDrawer('contest')">
     see all
-  </button>
+  </button>-->
 
 </div>
 <div class="leagues-wrapper">
@@ -17,7 +18,7 @@
         </div>
         <div class="league-caption">
           <span class="league-name">{{contest.caption}}</span>
-          <span class="league-leader" *ngIf="contest.competition.type.toString() === 'LEAGUE'">
+          <span class="league-leader" *ngIf="contest.competition.type.toString() === 'LEAGUE' && contest.competition.currentSeason.currentLeader && contest.competition.currentSeason.currentLeader.name">
             1. {{contest.competition.currentSeason.currentLeader.name}}
           </span>
         </div>
@@ -32,10 +33,11 @@
 <div class="section-title">
   <h4>Top teams</h4>
   <span fxFlex="1 0 auto"></span>
+  <!--
   <a *ngIf="homeService.drawerView != 'team'"
      (click)="openDrawer('team')">
     see all
-  </a>
+  </a>-->
 </div>
 <div class="leagues-wrapper">
   <div class="leagues">
