--- a/src/app/profile/components/drawer/drawer.component.scss
+++ b/src/app/profile/components/drawer/drawer.component.scss
@@ -93,6 +93,22 @@
     }
   }
 
+  .btn-back{
+    margin: 10px 0;
+    color: white;
+    border: 1px solid rgba(255,255,255,0.5);
+    line-height: 28px;
+    //@include mat-elevation(1);
+    mat-icon{
+      font-size: 15px;
+      width: 15px;
+      height: 15px;
+    }
+    span{
+      font-size: 12px;
+    }
+  }
+
   .rank{
     font-size: 12px;
     color: rgba(255,255,255,0.7);
