--- a/src/app/home/components/games/games.component.html
+++ b/src/app/home/components/games/games.component.html
@@ -2,7 +2,7 @@
   <h4>{{contest.competition.name}}</h4>
   <span fxFlex="1 0 auto"></span>
   <button (click)="moveTo(0)">Last</button>
-  <button (click)="moveLeft(3)">Left</button>
+  <button (click)="moveLeft()">Left</button>
   <button (click)="moveRight()">Right</button>
   <button (click)="moveTo(contest.competition.matches.length)">Last</button>
 </div>
