--- a/src/app/shared/component/cards/past-card/past-card.component.html
+++ b/src/app/shared/component/cards/past-card/past-card.component.html
@@ -19,7 +19,7 @@
             {{match.utcDate | date : 'HH:mm' }}
         </span>
         <span class="card-date">
-            {{match.utcDate | date : 'MMMM d' }}
+            {{match.utcDate | date : 'd MMMM yyyy' }}
         </span>
       </div>
 
