--- a/src/app/contest/modules/matches/matches.component.scss
+++ b/src/app/contest/modules/matches/matches.component.scss
@@ -17,9 +17,270 @@
     overflow: hidden;
     background: white;
     @include mat-elevation(2);
+
+
+    .matches-drawer-container {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      background: rgba(0,0,0,0.0);
+    }
+
+    .matches-drawer-content {
+      overflow: hidden !important;
+      display: flex !important;
+      flex-direction: column;
+      .header {
+        height: 72px;
+        min-height: 72px;
+        max-height: 72px;
+        flex-direction: row;
+        box-sizing: border-box;
+        display: flex;
+        place-content: center flex-start;
+        align-items: center;
+        padding: 24px!important;
+        color: rgba(0,0,0,.87);
+        background: #f5f5f5;
+        @include mat-elevation(2);
+        z-index: 2;
+      }
+      .matches{
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        width: 100%;
+        overflow-x: hidden;
+        overflow-y: auto;
+        a {
+          flex: none;
+          padding: 6px;
+          border-bottom: 1px solid rgba(0,0,0,0.1);
+          text-decoration: none !important;
+          color: #141E28 !important;
+          transition: all ease-in-out 0.3s;
+          .match-item{
+            display: flex;
+            flex-direction: row ;
+            width: 100% ;
+            justify-content: center;
+            align-items: center;
+            .team-item{
+              display: flex;
+              flex-direction: row;
+              flex-grow: 1;
+              flex-shrink: 1;
+              justify-content: space-between ;
+              align-items: center ;
+              flex-basis: 50%;
+              min-width: 0;
+              span{
+                //font-size: 1.313rem;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                flex-grow: 1;
+              }
+            }
+            .home-team{
+              app-blason{
+                margin-left: 20px;
+              }
+              span{
+                text-align: right;
+              }
+            }
+            .away-team{
+              flex-direction: row-reverse;
+              app-blason{
+                margin-right: 20px;
+              }
+              span{
+                text-align: left;
+              }
+            }
+            .match-score{
+              display: flex;
+              flex-direction: row ;
+              justify-content: center;
+              align-items: center;
+              width: 4.714rem;
+              margin: 0 15px;
+              height: 2.9981rem;
+              .score-info{
+                background-color: #F0F2F5;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                height: 100%;
+                color: #141e28;
+                border-radius: 4px;
+                font-size: 1.3rem;
+                .score-info-left{
+                  flex-grow: 1 !important;
+                  flex-shrink: 1 !important;
+                  text-align: right !important;
+                  flex-basis: 50%;
+                }
+                .score-info-right{
+                  flex-grow: 1 !important;
+                  flex-shrink: 1 !important;
+                  text-align: left !important;
+                  flex-basis: 50%;
+                }
+                .score-info-center{
+
+                  flex-grow: 0 !important;
+                  flex-shrink: 0 !important;
+                  text-align: center !important;
+                }
+              }
+            }
+
+
+          }
+        }
+        a:last-child{
+          border-bottom: none;
+        }
+        a:hover, a:focus {
+          background-color: #F0F2F5 !important;
+        }
+        a:hover, a:focus {
+          color: #030506 !important;
+        }
+      }
+    }
+
+    .matches-start-drawer{
+      display: flex;
+      flex-direction: column;
+      ::ng-deep .mat-drawer-inner-container{
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+      }
+    }
+
+    ::ng-deep .matches-start-drawer{
+      width: 200px;
+      background: #fafafa;
+
+      ::ng-deep .steps {
+        overflow: scroll;
+        padding: 16px 0;
+
+        ::ng-deep .step {
+          position: relative;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          padding: 16px;
+          cursor: pointer;
+
+          &.current {
+            background: #e1f5fe;
+            color: rgba(0,0,0,.87);
+            .index {
+              span {
+                background: #fafafa;
+                border: 2px solid #039be5 !important;
+              }
+              &:before{
+                border-left-color: #039be5 !important;
+              }
+            }
+
+            .title {
+              font-weight: bold;
+            }
+          }
+
+          &.completed {
+            color: rgba(0,0,0,.87);
+            .index {
+
+              span {
+                border: 2px solid #039be5 !important;
+              }
+
+              &:before,&:after {
+                border-left-color: #039be5 !important;
+              }
+            }
+          }
+
+          &.first {
+
+            .index {
+
+              &:before {
+                display: none;
+              }
+            }
+          }
+
+          &.last {
+
+            .index {
+
+              &:after {
+                display: none;
+              }
+            }
+          }
+
+          .index {
+            display: flex;
+            margin-right: 12px;
+
+            &:before,
+            &:after {
+              position: absolute;
+              display: block;
+              content: ' ';
+              border-left: 1px solid;
+              width: 1px;
+              height: 50%;
+              left: 32px;
+              z-index: 8;
+              border-left-color: rgba(0,0,0,.12);
+            }
+
+            &:before {
+              top: 0;
+            }
+
+            &:after {
+              bottom: 0;
+            }
+
+            span {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              position: relative;
+              width: 28px;
+              min-width: 28px;
+              max-width: 28px;
+              height: 28px;
+              border-radius: 100%;
+              border: 2px solid rgba(0,0,0,.12);
+              font-weight: bold;
+              font-size: 12px;
+              z-index: 10;
+              background: #fafafa;
+            }
+          }
+
+          .title {
+            display: flex;
+          }
+        }
+      }
+    }
   }
 
-  .mat-tab-link{
-    display: inline-flex !important;
-  }
 }
