--- a/src/app/shared/component/cards/lively-card/lively-card.component.html
+++ b/src/app/shared/component/cards/lively-card/lively-card.component.html
@@ -15,7 +15,7 @@
       </div>
       <div fxFlex fxLayout="column" fxLayoutAlign="center flex-end" fxLayoutGap="5px">
         <span class="card-hour card-hour-lively">
-          43:30
+          {{match.utcDate | date : 'HH:mm'}}
         </span>
         <span class="card-date-live">
           Live
@@ -25,7 +25,7 @@
     </div>
 
     <div fxLayout="column">
-      <span class="info-league">Premier League</span>
+      <span class="info-league">{{contest.competition.name}}</span>
       <div fxLayout="row" fxLayoutAlign="space-between" style="position: relative">
         <span class="info-team">{{match.homeTeam.name}}</span>
         <span class="info-score">{{match.score.fullTime.homeTeam}}</span>
